# casper-quorum

./: .gitignore  LICENSE  README.md
contracts/: .env.example  Cargo.toml  Odra.toml
contracts/src/: agent_registry.rs  decision_log.rs  lib.rs  treasury.rs
dashboard/: index.html
docs/: CHECKLIST.md  DEPLOY.md
orchestrator/: .env.example  package-lock.json  package.json  tsconfig.json
orchestrator/fixtures/: abstain.json  approve.json  escalate.json
orchestrator/src/: cli.ts  dashboard-server.ts  env.ts
orchestrator/src/agents/: council.ts  hash.ts  mcpClient.ts  narration.ts  oracle.ts  providers.ts  types.ts
orchestrator/src/chain/: casperClient.ts  deploy.ts
orchestrator/src/risk/: calibration.ts  math.ts  policyGate.ts  riskEngine.ts  types.ts
orchestrator/src/x402/: client.ts  merchant.ts  signer.ts  types.ts
orchestrator/test/: calibration.test.ts  council.test.ts  policyGate.test.ts  riskEngine.test.ts  x402.test.ts
